--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,6 @@
 <style type="text/css">
 <!--
 body {font-family: "游明朝", YuMincho, "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "HG明朝E", "ＭＳ Ｐ明朝", "ＭＳ 明朝", serif; font-size: 19px; }
-.post-title {font-size: 48px;}
+.page-header h1 {font-size: 48px;}
 -->
 </style>
