--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,6 +27,7 @@
 	{% assign group = nil %}
       </ul>
       <ul class="nav navbar-nav navbar-right">
+	<li><a href="/blog/"><span class="glyphicon glyphicon-list-alt" /></a></li>
 	<li><a href="https://coderdojo-suginami.doorkeeper.jp/contact/new"><span class="glyphicon glyphicon-envelope" /></a></li>
       </ul>
     </div><!--/.navbar-collapse -->
