--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -1,11 +1,31 @@
-<ul class="post-list">
-    {% for post in site.posts %}
-    <li>
-	<span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
+{% for post in site.posts  %}
+{% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
+{% capture this_month %}{{ post.date | date: "%-m" }}{% endcapture %}
+{% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
+{% capture next_month %}{{ post.previous.date | date: "%-m" }}{% endcapture %}
 
-	<h2>
-	    <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-	</h2>
-    </li>
-    {% endfor %}
+{% if forloop.first %}
+<h2>{{this_year}}</h2>
+<h3>{{this_month}}月</h3>
+<ul>
+  {% endif %}
+  
+  <li><span>{{ post.date | date: "%Y/%m/%d" }}</span> &raquo; <a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>
+  
+  {% if forloop.last %}
 </ul>
+{% else %}
+{% if this_year != next_year %}
+</ul>
+<h2>{{next_year}}</h2>
+<h3>{{next_month}}月</h3>
+<ul>
+  {% else %}    
+  {% if this_month != next_month %}
+</ul>
+<h3>{{next_month}}月</h3>
+<ul>
+{% endif %}
+{% endif %}
+{% endif %}
+{% endfor %}
