--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,13 +1,13 @@
 ---
 layout: default
 ---
-<article class="post">
+<article class="page">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+  <div class="page-header">
+    <h1>{{ page.title }}</h1>
+  </div>
 
-  <div class="post-content">
+  <div class="page-content">
     {{ content }}
   </div>
 
