Add materials page

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,9 +27,10 @@
 	{% assign group = nil %}
       </ul>
       <ul class="nav navbar-nav navbar-right">
+	<li><a href="/materials/"><span class="glyphicon glyphicon-book" /></a></li>
 	<li><a href="/blog/"><span class="glyphicon glyphicon-list-alt" /></a></li>
 	<li><a href="https://coderdojo-suginami.doorkeeper.jp/contact/new"><span class="glyphicon glyphicon-envelope" /></a></li>
-      </ul>
-    </div><!--/.navbar-collapse -->
-  </div>
+</ul>
+</div><!--/.navbar-collapse -->
+</div>
 </nav>
