Add coderdojo logo

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,14 @@
+<style><!--
+.navbar-brand {
+  padding: 0px;
+}
+.navbar-brand>img {
+  height: 100%;
+  padding: 15px;
+  width: auto;
+}
+//-->
+</style>
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -8,7 +19,7 @@
 	<span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">
-	{{ site.title }}
+	<img src="/images/CDRoundelWithLongText-LtBg.png" />
       </a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
