--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,7 @@
 	<span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">
-	<img src="/images/CDRoundelWithLongText-LtBg.png" />
+	<img src="/images/CDRoundelWithLongText-LtBg.png" alt="CoderDojo" />
       </a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
