--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,3 +2,5 @@
     <hr style="background-color: #fff; border-top: 2px dotted #8c8b8b;" />
     <p class="text-center" style="font-size:0.8em; color: #888;">CoderDojoすぎなみ</p>
 </footer>
+
+{% include sponsors.html %}
