--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -1,15 +1,15 @@
 <h3>スポンサー：</h3>
 <div class="row text-center">
-<div class="col-md-3">
+<div class="col-md-3 panel panel-primary">
 <a href="http://www.val.co.jp/">株式会社ヴァル研究所</a>
 </div>
-<div class="col-md-3">
+<div class="col-md-3  panel panel-primary">
 <a href="http://www.waicrew.com/">ワイクル株式会社</a>
 </div>
-<div class="col-md-3">
+<div class="col-md-3  panel panel-primary">
 <a href="/sponsorship/">【募集中】</a>
 </div>
-<div class="col-md-3">
+<div class="col-md-3  panel panel-primary">
 <a href="/sponsorship/">【募集中】</a>
 </div>
 </div>
