--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,4 @@
-<footer>
-    <hr style="background-color: #fff; border-top: 2px dotted #8c8b8b;" />
+<footer style="background-color:#000;">
     {% include sponsors.html %}
     <p class="text-center" style="font-size:0.8em; color: #888;">CoderDojoすぎなみ</p>
 </footer>
