--- a/_includes/event_list.html
+++ b/_includes/event_list.html
@@ -4,11 +4,12 @@
 // test: var url = "/training/events.json";
 var url = "https://api.doorkeeper.jp/groups/coderdojo-suginami/events.json?callback=?";
 $.getJSON(url, function(data) {
-    if (data.length == 0) {
+    if (data.length == 0 || data[0].event.title == "開催通知を受け取る") {
 	$("#event_list").append("<li>予定はありません</li>");
 	return;
     }
     $.each(data, function(idx, ev) {
+	if (ev.event.title == "開催通知を受け取る") {next;}
 	// title, public_url, address, starts_at, venue_name
 	var start = new Date(ev.event.starts_at);
 	// var ends = new Date(ev.event.ends_at);
