--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -1,4 +1,4 @@
-<h3>スポンサー：</h3>
+<h3 style="color:#fff;">スポンサーの紹介</h3>
 <div class="row text-center">
 <div class="col-md-4 panel panel-primary">
 <a href="http://www.val.co.jp/">株式会社ヴァル研究所</a>
