feat: Upgrade to Bootstrap 5 and refactor components
- Upgraded Bootstrap from v3 to v5.3.3 via CDN.
- Removed dependency on jQuery.
- Replaced deprecated components with Bootstrap 5 equivalents:
  -  ->
  -  -> utility classes
  -  -> utility classes
  -  ->  or
  -  ->
  -  ->
- Updated navbar and pagination to the new Bootstrap 5 structure.
- Replaced all  icons with corresponding emojis.
- Fixed layout issues caused by the upgrade, such as the hamburger menu, component spacing, and component heights.

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -1,13 +1,25 @@
 <h3 style="color:#fff;">スポンサーの紹介</h3>
 <div class="row text-center">
-<div class="col-md-4 panel panel-primary">
-<a href="http://www.val.co.jp/">株式会社ヴァル研究所</a>
+<div class="col-md-4 mb-3">
+<div class="card bg-primary text-white">
+<div class="card-body text-center">
+<a href="http://www.val.co.jp/" class="text-white">株式会社ヴァル研究所</a>
 </div>
-<div class="col-md-4  panel panel-primary">
-<a href="http://www.waicrew.com/">ワイクル株式会社</a>
 </div>
-<div class="col-md-4  panel panel-primary">
-<a href="/sponsorship/">【募集中】</a>
+</div>
+<div class="col-md-4 mb-3">
+<div class="card bg-primary text-white">
+<div class="card-body text-center">
+<a href="http://www.waicrew.com/" class="text-white">ワイクル株式会社</a>
+</div>
+</div>
+</div>
+<div class="col-md-4 mb-3">
+<div class="card bg-primary text-white">
+<div class="card-body text-center">
+<a href="/sponsorship/" class="text-white">【募集中】</a>
+</div>
+</div>
 </div>
 </div>
 
