--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,10 +3,8 @@ layout: default
 ---
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
-    <header class="page-header">
-	<h1 class="page-title" itemprop="name headline">{{ page.title }}</h1>
-	<p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%Y-%m-%d" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
-    </header>
+    <h1 class="page-title display-5" itemprop="name headline">{{ page.title }}</h1>
+	<p class="post-meta text-muted"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%Y-%m-%d" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
 
     <div class="post-content" itemprop="articleBody">
 	{{ content }}
@@ -15,14 +13,14 @@ layout: default
     <nav>
 	<ul class="pagination">
 	    {% if page.previous %}
-	    <li class="prev"><a href="{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
+	    <li class="page-item"><a class="page-link" href="{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
 	    {% else %}
-	    <li class="prev disabled"><a>&larr; Previous</a></li>
+	    <li class="page-item disabled"><a class="page-link" href="#">&larr; Previous</a></li>
 	    {% endif %}
 	    {% if page.next %}
-	    <li class="next"><a href="{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
+	    <li class="page-item"><a class="page-link" href="{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
 	    {% else %}
-	    <li class="next disabled"><a>Next &rarr;</a>
+	    <li class="page-item disabled"><a class="page-link" href="#">Next &rarr;</a>
 		{% endif %}
 	</ul>
     </nav>
