--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,37 +9,32 @@
 }
 //-->
 </style>
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-	<span class="sr-only">Toggle navigation</span>
-	<span class="icon-bar"></span>
-	<span class="icon-bar"></span>
-	<span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/">
-	<img src="/images/CDRoundelWithLongText-LtBg.png" alt="CoderDojo" />
-      </a>
-    </div>
+    <a class="navbar-brand" href="/">
+	{{ site.title }}
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
     <div id="navbar" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 	{% assign pages_list = site.pages | sort: 'order'%}
 	{% for node in pages_list %}
 	{% if node.group == 'navigation' %}
       	{% if page.url == node.url %}
-      	<li role="presentation" class="active"><a href="{{ BASE_PATH }}{{node.url}}" class="active">{{node.title}}</a></li>
+      	<li class="nav-item"><a href="{{ BASE_PATH }}{{node.url}}" class="nav-link active">{{node.title}}</a></li>
       	{% else %}
-      	<li role="presentation"><a href="{{ BASE_PATH }}{{node.url}}">{{node.title}}</a></li>
+      	<li class="nav-item"><a href="{{ BASE_PATH }}{{node.url}}" class="nav-link">{{node.title}}</a></li>
       	{% endif %}
 	{% endif %}
 	{% endfor %}
 	{% assign pages_list = nil %}
 	{% assign group = nil %}
       </ul>
-      <ul class="nav navbar-nav navbar-right">
-	<li><a href="https://coderdojo-suginami.doorkeeper.jp/contact/new"><span class="glyphicon glyphicon-envelope" /></a></li>
-</ul>
-</div><!--/.navbar-collapse -->
-</div>
+      <ul class="navbar-nav">
+	<li class="nav-item"><a class="nav-link" href="https://coderdojo-suginami.doorkeeper.jp/contact/new">✉️</a></li>
+      </ul>
+    </div><!--/.navbar-collapse -->
+  </div>
 </nav>
