--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,9 +3,7 @@ layout: default
 ---
 <article class="page">
 
-  <div class="page-header">
-    <h1>{{ page.title }}</h1>
-  </div>
+  <h1 class="display-5 border-bottom pb-2 mb-4">{{ page.title }}</h1>
 
   <div class="page-content">
     {{ content }}
